deployments/kubernetes-dashboard/k8s-dashboard-ingress copy 2.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match:   Host(`kubernetes-dashboard.my-domain.com`)
    priority: 10
    services:
    - kind: Service
      name: kubernetes-dashboard
      namespace: kubernetes-dashboard
      port: 443
      serversTransport: kubernetes-dashboard-transport
  tls:
    secretName: iszland-com-tls
